integrated timeline into cv and fixed a layout bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,9 +3,11 @@
 @import "./styles/_base.scss";
 
 html {
+  height: 100%;
+  width: 100%;
   body {
+    min-height: 100%;
     width: 100%;
-    height: 100%;
     background: url("./assets/images/embedded/background.png") no-repeat;
     background-size: cover;
     margin: 0;
